@@ -1,5 +1,6 @@
 v0.x.x: dd-mmm-2009
- . api: update-score supports emtpy cc_playername
+ . API: update-score supports emtpy cc_playername
+ . API: Raise error in abnormal situatino. Log the game name
 
 v0.3.1 - 21-Apr-2009
  . Admin: con edit the "publish" property
